# emccd_detect

./: .gitignore  README.md  cosm_script.py  cosmic_script.py  example_script.py  example_script_m.py  example_script_pc.py  fluxmap.npy  main.py  matlab_call_emccd_detect.m  metadata_script.py  multi_frame.py  noise_script.py  profile_script.py  pymat_diff.py  runtime_script.py  setup.py  traps_script.py
Reference/: EMCCDregisters.pptx
arcticpy/: .gitignore  LICENSE.txt  setup.py
arcticpy_folder/: README.md  requirements.txt  setup.py
data/: metadata.yaml  (+1 more)
emccd_detect/: .gitignore  LICENSE.txt  README.md  cosmic_hits.py  cosmic_tails.py  cosmics.py  emccd_detect.py  emccd_detect_new.py  emccd_detect_old  emccd_detect_old.py  example_script.py  example_script_m.py  matlab_call_emccd_detect.m  metadata.yaml  metadata_script.py  photon_count.py  profile_rand_em_gain.py  pyproject.toml  rand_em_gain.py  remove_cosmics.py  setup.py
emccd_detect/.github/workflows/: publish.yml  python-app.yml
emccd_detect/docs/: 20211018excamcoords.pptx  EMCCDregisters.pptx  emccd_frame_geometry.pptx
emccd_detect/emccd_detect/: __init__.py  cosmics.py  emccd_detect.py  nonlinearity.py  rand_em_gain.py
emccd_detect/emccd_detect/util/: flat_sample_sub.fits  metadata.yaml  metadata_eng.yaml  metadata_eng_conv.yaml  metadata_eng_em.yaml  metadata_test.yaml  nonlin_sample.csv  read_metadata.py  read_metadata_wrapper.py
emccd_detect/scripts/: cti_study.py  diagnostic_script.py  flat_test.py  main.py  multi_frame.py  plot_gain_curves.py  profile_rand_em_gain.py  profile_script.py  pymat_diff.py  traps_script.py
emccd_detect/util/: auto_arrange_figures.py  histbn.py  imagesc.py  metadata.yaml  moving_mean.py  peaks.py  polar.py  read_metadata.py  read_metadata_wrapper.py
(+91 files in other folders)
