[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emccd_detect"       # REQUIRED
version = "2.5.1"              # REQUIRED
#description = "Short summary"
readme = "README.md"
license = { file = "LICENSE" }
#authors = [{ name = "Kevin Ludwick", email = "your@email.com" }]
#dependencies = []
