[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emccd_detect"       # REQUIRED
version = "2.5.0"              # REQUIRED
#description = "Short summary"
readme = "README.md"
license = { file = "LICENSE.txt" }
#authors = [{ name = "Kevin Ludwick", email = "your@email.com" }]
dependencies = []
